# c64-emu

./: .clang-format  .gitgnore  .gitignore  1983_compute.txt  6502test.s  C64Diag.crt  CMakeLists.txt  DEFENDER.CRT  Makefile  assemble.sh  cc65.cfg  plot.py
include/: ASDREnvelope.hpp  C64Bus.hpp  LFSR.hpp  System.hpp  bus.hpp  cia1.hpp  cia2.hpp  cpu.hpp  floppy.hpp  input.hpp  serial_bus.hpp  serial_device.hpp  sid.hpp  system.hpp  vic.hpp
src/: ASDREnvelope.cpp  C64Bus.cpp  LFSR.cpp  System.cpp  bus.cpp  chrom.h  cia1.cpp  cia2.cpp  cpu.cpp  floppy.cpp  input.cpp  kernal.h  main.cpp  serial_bus.cpp  sid.cpp  system.cpp  test6502.cpp  vic.cpp  wasmmain.cpp
svelte/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.js
svelte/src/: app.html
svelte/src/lib/components/: AdditionalControls.svelte  ConsoleOutput.svelte  EmulatorDisplay.svelte  Header.svelte  Settings.svelte  SliderControl.svelte  ToggleSwitch.svelte
svelte/src/lib/stores/: emulator.js  emulator.ts
svelte/src/lib/styles/: variables.css
svelte/src/routes/: +layout.svelte  +page.svelte
svelte/static/: audio-worklet.js  main.js  main.wasm  sid-filter-worklet.js  worker.js
